Fixes message icons not showing up in the correct position.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -674,9 +674,19 @@ table.links.table-striped {
     }
 }
 
+// Necessary for correct precedence.
+.message-icon() {
+    &:before {
+        left: 10px;
+        position: absolute;
+        top: 21px;
+    }
+}
+
 .message,
 .message-info {
     .icon-info-sign;
+    .message-icon();
 
     background-color: @color-note-lighter;
     .border-radius(5px);
@@ -685,12 +695,6 @@ table.links.table-striped {
     padding: 10px 10px 10px 33px;
     position: relative;
 
-    &:before {
-        left: 10px;
-        position: absolute;
-        top: 21px;
-    }
-
     > *:last-child {
         margin-bottom: 0;
     }
@@ -698,6 +702,7 @@ table.links.table-striped {
 
 .message-error {
     .icon-exclamation-sign;
+    .message-icon();
 
     background-color: @color-alert-darker;
     color: white;
@@ -705,12 +710,14 @@ table.links.table-striped {
 
 .message-success {
     .icon-ok-sign;
+    .message-icon();
 
     background-color: #9c2;
 }
 
 .message-warning {
     .icon-exclamation-sign;
+    .message-icon();
 
     background-color: #ed9;
 }
